# chalx

./: Makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: checks.yml
api/: alignment.py  animation.py  arc.py  broadcast.py  combinators.py  envelope.py  names.py  path.py  rendering.py  shapes.py  styles.py  subdiagram.py  text.py  trails.py  transformations.py
api/output/: alignment.html  alignment.ipynb  arc.html  arc.ipynb  broadcast.html  broadcast.ipynb  combinators.html  combinators.ipynb  envelope.html  envelope.ipynb  names.html  names.ipynb  path.html  path.ipynb  rendering.html  rendering.ipynb  shapes.html  shapes.ipynb  styles.html  styles.ipynb  subdiagram.html  subdiagram.ipynb  text.html  text.ipynb  trails.html  trails.ipynb
chalk/: __init__.py  align.py  array_types.py  arrow.py  arrowheads.py  broadcast.py  combinators.py  core.py  envelope.py  export.py  layout.py  model.py  monoid.py  namespace.py  path.py  segment.py  shapes.py  style.py  subdiagram.py  trace.py  trail.py  transform.py  types.py  visitor.py
chalk/backend/: __init__.py  cairo.py  matplotlib.py  patch.py  svg.py
chalk/shapes/: __init__.py  arc.py  arrowheads.py  path.py  shape.py  text.py
docs/: index.md
docs/overrides/: main.html
examples/: arrows.py  bigben.py  escher_square_limit.py  hanoi.py  hex_variation.py  hilbert.py  intro-jax.py  intro.py  isometric.py  koch.py  latex.py  lattice.py  lenet.py  logo.py  normalized.py  path.py  rectangle_parade.py  squares.py  tensor.py  tree.py
examples/output/: index.html
examples/tests/: index.tpl.html
requirements/: dev.txt  docs.txt
tests/: test_envelope.py
walkthrough/: alignment.py  animation.py  arc.py  broadcast.py  combinators.py  envelope.py  names.py  path.py  rendering.py  shapes.py  styles.py  subdiagram.py  text.py  trails.py  transformations.py
walkthrough/output/: alignment.html  alignment.ipynb  arc.html  arc.ipynb  broadcast.html  broadcast.ipynb  combinators.html  combinators.ipynb  envelope.html  envelope.ipynb  names.html  names.ipynb  path.html  path.ipynb  rendering.html  rendering.ipynb  shapes.html  shapes.ipynb  styles.html  styles.ipynb  subdiagram.html  subdiagram.ipynb  (+4 more)
