[build-system]
requires = ["setuptools", "wheel"]

build-backend = "setuptools.build_meta"

[tool.pyright]
venv = ".venv12"
venvPath = "."
include = ["chalk", "walkthrough", "examples"]
ignore = ["**/tests/*"]
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"
reportUnusedExpression = "none"
reportUnknownLambdaType = "none"
reportIncompatibleMethodOverride = "none"
reportPrivateUsage = "none"

[tool.ruff]

include = ["**/chalk/*"]
exclude = ["**/output/*", "*.ipynb"]

ignore = [
    "ANN101",
    "ANN401",
    "N801",
    "E203",
    "E266",
    "E501",
    "E741",
    "N803",
    "N802",
    "N806",
    "D400",
    "D401",
    "D105",
    "D415",
    "D402",
    "D205",
    "D100",
    "D101",
    "D107",
    "D213",
    "ANN204",
    "ANN102",
    "F722",
    "D407",
]
select = ["D", "E", "F", "N", "ANN"]
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []

[tool.ruff.extend-per-file-ignores]
"tests/**/*.py" = ["D"]
"examples/**/*.py" = ["D", "F", "ANN"]
"walkthrough/**/*.py" = ["D", "ANN", "F"]
